--- a/microservices/club-service/src/main/resources/application.yml
+++ b/microservices/club-service/src/main/resources/application.yml
@@ -7,17 +7,15 @@ spring:
       - clubById
       - clubByName
   config:
-    import: optional:configserver:http://localhost:8888
-#    import: optional:configserver:http://config-server:8888
+    import: optional:configserver:http://config-server:8888
   rabbitmq:
-    host: localhost
-#    host: rabbitmq
+    host: rabbitmq
     port: 5672
     username: guest
     password: guest
   data:
     redis:
-      host: localhost
+      host: redis-club-db
       port: 6379
       timeout: 2000
       lettuce:
