--- a/microservices/notification-service/src/main/resources/application.yml
+++ b/microservices/notification-service/src/main/resources/application.yml
@@ -4,8 +4,7 @@ spring:
   cache:
     type: caffeine
   config:
-    import: optional:configserver:http://localhost:8888
-  #    import: optional:configserver:http://config-server:8888
+    import: optional:configserver:http://config-server:8888
   cloud:
     stream:
       default-binder: kafka
@@ -27,8 +26,7 @@ spring:
         springCloudBusOutput:
           binder: rabbit
   rabbitmq:
-    host: localhost
-    #    host: rabbitmq
+    host: rabbitmq
     port: 5672
     username: guest
     password: guest
