--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,21 +1,48 @@
-events {}
+events { worker_connections 1024; }
 
 http {
-  include       mime.types;
+  include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
+  sendfile      on;
+  tcp_nopush    on;
+  tcp_nodelay   on;
+  keepalive_timeout  65;
+
+  gzip on;
+  gzip_types text/plain text/css application/javascript application/json image/svg+xml;
+
+  map $http_upgrade $connection_upgrade { default upgrade; '' close; }
+
+  upstream api_gateway {
+    server api-gateway:9191;
+  }
 
   server {
     listen 80;
-    server_name localhost;
+    server_name _;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    location /api/ {
+      proxy_pass         http://api_gateway/;
+      proxy_http_version 1.1;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_set_header   Upgrade $http_upgrade;
+      proxy_set_header   Connection $connection_upgrade;
+    }
 
     location / {
-      root   /usr/share/nginx/html;
-      index  index.html;
       try_files $uri $uri/ /index.html;
+    }
 
-      add_header Cache-Control "no-cache, no-store, must-revalidate";
-      add_header Pragma "no-cache";
-      add_header Expires 0;
+    location ~* \.(?:js|css|woff2?|ttf|eot|svg|png|jpg|jpeg|gif)$ {
+      expires 7d;
+      access_log off;
+      try_files $uri =404;
     }
 
     error_page 404 /index.html;
