--- a/microservices/payment-service/src/main/resources/application.yml
+++ b/microservices/payment-service/src/main/resources/application.yml
@@ -12,11 +12,9 @@ spring:
         springCloudBusOutput:
           binder: rabbit
   config:
-    import: optional:configserver:http://localhost:8888
-#    import: optional:configserver:http://config-server:8888
+    import: optional:configserver:http://config-server:8888
   rabbitmq:
-    host: localhost
-#    host: rabbitmq
+    host: rabbitmq
     port: 5672
     username: guest
     password: guest
