--- a/microservices/training-service/src/main/resources/application.yml
+++ b/microservices/training-service/src/main/resources/application.yml
@@ -5,15 +5,13 @@ spring:
     type: redis
   data:
     redis:
-      host: localhost
-      port: 6381
+      host: redis-training-db
+      port: 6379
       timeout: 2s
   config:
-    import: optional:configserver:http://localhost:8888
-#    import: optional:configserver:http://config-server:8888
+    import: optional:configserver:http://config-server:8888
   rabbitmq:
-    host: localhost
-#    host: rabbitmq
+    host: rabbitmq
     port: 5672
     username: guest
     password: guest
