--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -25,7 +25,7 @@ http {
     index index.html;
 
     location /api/ {
-      proxy_pass         http://api_gateway/;
+      proxy_pass         http://api-gateway:9191/;
       proxy_http_version 1.1;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
