--- a/microservices/enrollment-service/build.gradle
+++ b/microservices/enrollment-service/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 
     // --- Database driver ---
     runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'com.h2database:h2'
 
     // --- Lombok for boilerplate code reduction ---
     compileOnly 'org.projectlombok:lombok'
