--- a/microservices/notification-service/build.gradle
+++ b/microservices/notification-service/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 	// --- Email ---
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+	// --- Database ---
+	runtimeOnly 'com.h2database:h2'
+
 	// --- Messaging (RabbitMQ && Apache Kafka) ---
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	testImplementation 'org.springframework.amqp:spring-rabbit-test'
